ecmascript/parser/tests/test262-error-references/fail/adb1ba1ed78bb9f4.js.stderr
error: Expected a hexadecimal digit
 --> $DIR/tests/test262-parser/fail/adb1ba1ed78bb9f4.js:1:3
  |
1 | 0xz
  |   ^

